<resources>
    <string name="app_name">Simple Forms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_form">Create Form</string>
    <string name="title">Title</string>
    <string name="form_description">Form description here</string>
    <string name="untitled_question">Untitled question</string>
    <string name="image">Add Image</string>
    <string name="video">Add Video</string>
    <string name="upload_files">Upload Files</string>
    <string name="mcq">MCQ</string>
    <string name="short_answer">Short Answer</string>
    <string name="long_answer">Long Answer</string>
</resources>