<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/std_12"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white"
    android:padding="@dimen/std_4"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/answer_type_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/answer_type_mcq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/std_4"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mcq_vector_asset"
                android:layout_marginRight="@dimen/std_12"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mcq"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/answer_type_short_answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/std_4"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/short_answer_vector_asset"
                android:layout_marginRight="@dimen/std_12"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_answer"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/answer_type_long_answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/std_4"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/long_answer_vector_asset"
                android:layout_marginRight="@dimen/std_12"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_answer"
                android:textSize="16sp"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>